// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-10m4me2 > div,
[data-css-10m4me2] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-10m4me2 > div:nth-child(2n-1),
[data-css-10m4me2] > div:nth-child(2n-1) {
  animation-delay: -0.35s !important;
  -webkit-animation-delay: -0.35s !important;
}

<BallBeat
  loading={true}
>
  <div
    data-css-10m4me2=""
  >
    <div />
    <div />
    <div />
  </div>
</BallBeat>
`;

exports[`enzyme.render 1`] = `
.css-10m4me2 > div,
[data-css-10m4me2] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-10m4me2 > div:nth-child(2n-1),
[data-css-10m4me2] > div:nth-child(2n-1) {
  animation-delay: -0.35s !important;
  -webkit-animation-delay: -0.35s !important;
}

<div
  data-css-10m4me2=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-10m4me2 > div,
[data-css-10m4me2] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-10m4me2 > div:nth-child(2n-1),
[data-css-10m4me2] > div:nth-child(2n-1) {
  animation-delay: -0.35s !important;
  -webkit-animation-delay: -0.35s !important;
}

<div
  data-css-10m4me2=""
>
  <div />
  <div />
  <div />
</div>
`;
